# ispc_texcomp_py

./: .gitignore  .gitmodules  README.md  build_ext_ispc.py  manifest.in  pyproject.toml  setup.py
.github/workflows/: build.yml  doc.yml  release.yml  test.yml
ispc_texcomp/: __init__.pyi
src/: ispc_texcomp_py.cpp  rgba_surface_py.hpp  settings.hpp
tests/: test_main.py
