[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "ispc_texcomp_py"
version = "0.1.0"
authors = [{ name = "Rudolf Kolbe", email = "rkolbe96@gmail.com" }]
description = "python bindings for ISPCTextureCompressor"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.6"
keywords = [
    "python",
    "python3",
    "ispc",
    "texture",
    "texture compression",
    "astc",
    "etc",
]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Development Status :: 5 - Production/Stable",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Games/Entertainment",
    "Topic :: Multimedia :: Graphics",
]

[project.urls]
"Homepage" = "https://github.com/K0lb3/UnityPy"
"Bug Tracker" = "https://github.com/K0lb3/UnityPy/issues"


[tool.cibuildwheel]
test-command = "python {project}/tests/test_main.py"
test-skip = "*universal2:arm64"
test-requires = [
    "imagehash",
    "texture2ddecoder",
    "pillow"
]
